--- a/scss/_vanilla.scss
+++ b/scss/_vanilla.scss
@@ -14,7 +14,6 @@
 @import 'patterns_form-help-text';
 @import 'patterns_form-validation';
 @import 'patterns_forms';
-@import 'patterns_global-nav';
 @import 'patterns_grid';
 @import 'patterns_heading-icon';
 @import 'patterns_headings';
@@ -63,6 +62,8 @@
 @import 'utilities_vertically-center';
 @import 'utilities_no-print';
 
+@import 'patterns_global-nav';
+
 // Include all the CSS
 @mixin vanilla {
   @include vf-base;
@@ -79,7 +80,6 @@
   @include vf-p-form-help-text;
   @include vf-p-form-validation;
   @include vf-p-forms;
-  @include vf-p-global-nav;
   @include vf-p-grid-modifications;
   @include vf-p-grid;
   @include vf-p-heading-icon;
@@ -127,4 +127,7 @@
   @include vf-u-vertical-spacing;
   @include vf-u-vertically-center;
   @include vf-u-no-print;
+
+  @include vf-p-global-nav;
+  @include vf-p-ubuntu-nav;
 }
