Add animated suru example

--- a/docs/_layouts/examples.html
+++ b/docs/_layouts/examples.html
@@ -7,7 +7,7 @@
     <title>{% if page.title %} {{ page.title }} | {% endif %} {{ site.name }}</title>
     <link rel="stylesheet" type="text/css" href="/build/css/build.css" />
   </head>
-  <body {% if page.url != '/' and page.url != '/examples/templates/canonical-nav/' and page.url != '/examples/templates/canonical-ubuntu-navs/' %}style="margin:1rem"{% endif %}>
+  <body {% if page.url != '/' and page.url != '/examples/templates/canonical-nav/' and page.url != '/examples/templates/canonical-ubuntu-navs/' and page.url != '/examples/templates/animated-suru/' %}style="margin:1rem"{% endif %}>
     {{ content }}
     <script>
       function inIframe () {
