--- a/docs/examples/templates/animated-suru.html
+++ b/docs/examples/templates/animated-suru.html
@@ -1,6 +1,6 @@
 ---
 layout: examples
-title: Canonical nav
+title: Animated suru pattern
 category: _templates
 ---
 <header class="gn-container">
@@ -175,9 +175,11 @@ category: _templates
           </li>
         </div>
       </ul>
-      <div class="gn-suru--1"></div>
-      <div class="gn-suru--2"></div>
-      <div class="gn-suru--3"></div>
+      <div class="gn-animated-suru--1"></div>
+      <div class="gn-animated-suru--2"></div>
+      <div class="gn-animated-suru--3"></div>
+      <div class="gn-animated-suru--4"></div>
+      <div class="gn-animated-suru--5"></div>
     </div>
     <div id="partners-dropdown" class="gn-dropdown__container">
       <div class="gn-dropdown__content">
@@ -319,10 +321,11 @@ category: _templates
           </li>
         </ul>
       </div>
-      <div class="gn-suru--4"></div>
-      <div class="gn-suru--5"></div>
-      <div class="gn-suru--6"></div>
-      <div class="gn-suru--7"></div>
+      <div class="gn-animated-suru--1"></div>
+      <div class="gn-animated-suru--2"></div>
+      <div class="gn-animated-suru--3"></div>
+      <div class="gn-animated-suru--4"></div>
+      <div class="gn-animated-suru--5"></div>
     </div>
     <div id="careers-dropdown" class="gn-dropdown__container">
       <div class="gn-dropdown__content">
@@ -443,9 +446,11 @@ category: _templates
           </li>
         </ul>
       </div>
-      <div class="gn-suru--8"></div>
-      <div class="gn-suru--9"></div>
-      <div class="gn-suru--10"></div>
+      <div class="gn-animated-suru--1"></div>
+      <div class="gn-animated-suru--2"></div>
+      <div class="gn-animated-suru--3"></div>
+      <div class="gn-animated-suru--4"></div>
+      <div class="gn-animated-suru--5"></div>
     </div>
   </div>
   <div class="gn-secondary-nav">
