tfoot border, remove leftover strong link references (#2369)
* add tfoot border-top and vertical-align:top

* put border in placeholderfor cleaner css

* remove leftover strong link references

--- a/scss/_base_tables.scss
+++ b/scss/_base_tables.scss
@@ -19,6 +19,7 @@
     padding-left: 0;
     text-align: left;
     text-overflow: ellipsis;
+    vertical-align: top;
 
     @media screen and (min-width: $breakpoint-medium) {
       &:not(:last-child) {
@@ -43,14 +44,24 @@
   tbody {
     tr {
       &:not(:first-child) {
-        border-top: 1px solid $color-mid-light;
+        @extend %table-row-border;
       }
     }
   }
 
+  tfoot {
+    tr {
+      @extend %table-row-border;
+    }
+  }
+
+  %table-row-border {
+    border-top: 1px solid $color-mid-light;
+  }
+
   //accordion, table
   %single-border-text-vpadding--scaling {
-    padding-bottom: calc(#{$spv-inner--x-small--scaleable} - 1px);
-    padding-top: $spv-inner--x-small--scaleable;
+    padding-bottom: $spv-inner--x-small--scaleable;
+    padding-top: calc(#{$spv-inner--x-small--scaleable} - 1px);
   }
 }
